--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "db:push": "drizzle-kit push",
     "start": "NODE_ENV=production node dist/index.js",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist/public"
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
